# bespoke-labs-tasks-01

./: new_tasks.sh  plan.md
aisc-tension-member/: docker-compose.yaml  instruction.md  task.yaml
ansi-colorizer/: job.yaml
binary-protocol-re/: instruction.md  job.yaml  oracle.yaml
bulk-lister/: README.md  instruction.md  task.toml
code-formatter-c-c/: README.md  generate_cases.py  instruction.md  task.toml
code-formatter-go-go/: README.md  generate_cases.py  instruction.md  task.toml
code-formatter-java-java/: README.md  generate_cases.py  instruction.md  task.toml
code-formatter-js-js/: instruction.md
code-formatter-py-py/: README.md  generate_cases.py  instruction.md  task.toml
code-formatter-rust-rs/: README.md  generate_cases.py  instruction.md  task.toml
dirlist/: task.toml
discarded/: new_tasks.sh  prompt.txt
elf-linker-fix-layout/: README.md  instruction.md
elf-linker-fix-relocation/: job.yaml
elf-linker-from-scratch/: README.md  instruction.md  job.yaml
eng-aisc360-f21/: README.md  generate_cases.py  instruction.md  task.toml
entry-sorter/: README.md  instruction.md  task.toml
harbor/: run-jobs.sh  run-ui.sh
heap-allocator/: instruction.md  job.yaml  task.toml
inline-renderer/: README.md  task.toml
leaf-parser/: instruction.md
longform-listing/: task.toml
markdown-html/: README.md  instruction.md  oracle.yaml  task.toml
md2html-containers/: .gitignore  README.md
risinglight/environment/workspace/: Cargo.toml
risinglight/environment/workspace/src/: lib.rs
risinglight/environment/workspace/tests/: sqllogictest.rs
(+4520 files in other folders)
