[package]
name = "sqldb"
version = "0.1.0"
edition = "2021"

[lib]
name = "sqldb"

[dependencies]
sqlparser = "0.53"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "2"
anyhow = "1"
ordered-float = "4"
chrono = { version = "0.4", features = ["clock", "std"] }
itertools = "0.13"
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
num-traits = "0.2"

[dev-dependencies]
sqllogictest = "0.23"
libtest-mimic = "0.8"
glob = "0.3"

[[test]]
name = "sqllogictest"
harness = false
